--- a/Julfiker_Portfolio/Views/Home/Index.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Index.cshtml
@@ -23,7 +23,10 @@
 
       <!-- About -->
       <div class="col-md-8 text-light text-md-start text-center">
-        <h1 class="display-4 fw-bold text-warning mb-4"><span id="typed"></span></h1>
+    <h1 class="display-4 fw-bold text-warning mb-4 hero-title">
+    <span id="typed"></span>
+</h1>
+
         <p class="lead">
           I'm <span class="text-info fw-bold">Md Julfiker Ali Jewel</span>, a <strong>Software Programmer Analyst</strong> at the
           <strong>West Virginia Department of Health and Human Resources (DHHR)</strong>. I design and ship
